Fixes #7: Prevent tooltip flicker when mousing over report pie chart slices

--- a/app/assets/stylesheets/reports.css.scss
+++ b/app/assets/stylesheets/reports.css.scss
@@ -8,4 +8,5 @@
     width: 0px;
     padding: 0px;
     background-color: rgba(255,255,255,.75);
+    pointer-events: none;
 }
